--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,14 +39,14 @@ const canonicalURL = new URL(seo?.canonical_url ?? Astro.url.pathname, baseUrl);
     <link href="/vendor/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="/vendor/phosphor-icons/css/phosphor.css" rel="stylesheet" />
     <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
     <link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
     <link rel="icon" type="image/png" href="/images/favicon.png" />
     <meta name="generator" content={Astro.generator} />
-
+    <title>Cimenterie Du Sénégal</title>
     <SEO
       noindex={seo?.no_index || false}
       title={title}
